<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.appkotlinnav.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_redes"
            app:destination="@id/nav_redes" />
        <action
            android:id="@+id/action_nav_home_to_nav_entretenimiento"
            app:destination="@id/nav_entretenimiento" />
        <action
            android:id="@+id/action_nav_home_to_nav_mensajeria"
            app:destination="@id/nav_mensajeria" />
        <action
            android:id="@+id/action_nav_home_to_fragmento_ofimtica"
            app:destination="@id/nav_ofimatica" />
    </fragment>

    <fragment
        android:id="@+id/nav_entretenimiento"
        android:name="com.example.appkotlinnav.ui.gallery.GalleryFragment"
        android:label="@string/menu_entretenimiento"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_nav_gallery_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/fragment_fade_exit" />
    </fragment>

    <fragment
        android:id="@+id/nav_mensajeria"
        android:name="com.example.appkotlinnav.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_mensajeria"
        tools:layout="@layout/fragment_slideshow" >
        <action
            android:id="@+id/action_nav_slideshow_to_nav_home"
            app:enterAnim="@anim/fragment_fade_exit"
            app:popUpTo="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_redes"
        android:name="com.example.appkotlinnav.ui.redessociales.FragmentoNuevoUno"
        android:label="@string/menu_redes"
        tools:layout="@layout/fragmento_nuevo_uno_fragment" >
        <action
            android:id="@+id/action_nav_slideshow_to_nav_apps"
            app:enterAnim="@anim/fragment_fade_exit"
            app:popUpTo="@id/nav_home" />

    </fragment>
    <fragment
        android:id="@+id/nav_ofimatica"
        android:name="com.example.appkotlinnav.ui.ofimatica.Fragmento_ofimtica"
        android:label="@string/menu_ofimatica"
        tools:layout="@layout/fragmento_ofimtica_fragment" >
        <action
            android:id="@+id/action_fragmento_ofimtica_to_nav_home"
            app:enterAnim="@anim/fragment_fade_exit"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>